fix add resource content off-center issue cleanup some styling on authoring and delivery fix a safari styling issue with custom-select remove them flashing related to dark mode

--- a/assets/src/components/content/AddResourceContent.scss
+++ b/assets/src/components/content/AddResourceContent.scss
@@ -47,8 +47,8 @@
 
     .insert-button {
       border-radius: 50%;
-      width: 25px;
-      height: 25px;
+      width: 26px;
+      height: 26px;
       border: 2px solid $gray-500;
       color: $gray-500;
       opacity: 0;
