--- a/assets/styles/authoring/variables.scss
+++ b/assets/styles/authoring/variables.scss
@@ -15,8 +15,8 @@ $hover: darken($primary, 10%) !default;
 $active: darken($primary, 15%) !default;
 
 $workspace-header-bg:  $white !default;
-$workspace-sidebar-bg: #2C3E50 !default;
-$workspace-sidebar-link-color:  $white !default;
+$workspace-sidebar-bg: $gray-100 !default;
+$workspace-sidebar-link-color: $gray-800 !default;
 $workspace-bg:  $white !default;
 
 // Master z-index list
