--- a/assets/styles/delivery/main.scss
+++ b/assets/styles/delivery/main.scss
@@ -128,3 +128,7 @@ blockquote {
     color: $gray-400;
   }
 }
+
+.custom-select {
+  -webkit-appearance: none;
+}
